--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -6,7 +6,6 @@ body {
 
 #header{
   position:fixed;
-  mix-blend-mode: difference;
   height: 50px;
   display:block;
   width: 100%;
@@ -19,6 +18,21 @@ body {
   top:0px;
 }
 
+#header2{
+  position:fixed;
+	mix-blend-mode: difference;
+  height: 50px;
+  display:none;
+  width: 100%;
+  z-index:9;
+  text-align:center;
+  padding: 20px 0 0 0;
+}
+
+#header2{
+  top:0px;
+}
+
 #aboutbutton {
   width:33%;
   text-align: left;
@@ -27,6 +41,21 @@ body {
   padding-top: 2%;
 }
 #workbutton {
+  width:33%;
+  text-align: right;
+  float: right;
+  padding: 5%;
+  padding-top: 2%;
+}
+
+#aboutbutton2 {
+  width:33%;
+  text-align: left;
+  float: left;
+  padding: 5%;
+  padding-top: 2%;
+}
+#workbutton2 {
   width:33%;
   text-align: right;
   float: right;
@@ -100,8 +129,16 @@ a:link {
   }
 
   #item3 {
-    background-color: white;
+    background-image: url("../images/myrge-thumbnail.png");
+		background-size: 50%;
+		background-position: right bottom;
+		background-color: #F7EBE2;
+		background-repeat: no-repeat;
   }
+
+	#item5 {
+		background-color: red;
+	}
 
 	.content {
 		width:400px;
