--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -6,6 +6,17 @@ body {
 	font-weight: 300;
 }
 
+a {
+	color: white;
+}
+
+#abouttext {
+	width: 50%;
+	margin-top: 1em;
+	font-size: 13px;
+	line-height: 2em;
+}
+
 #header {
   position:fixed;
   height: 50px;
@@ -157,6 +168,12 @@ a:link {
 
   #item1 {
     background-color: white;
+		background-image: url("../images/headshot3.png");
+		background-size: 30%;
+		background-position: right bottom;
+		background-repeat: no-repeat;
+
+
   }
 
   #item3 {
