--- a/stylesheets/work.css
+++ b/stylesheets/work.css
@@ -20,7 +20,7 @@ h3 {
 
 #hero{
   background-position: center center;
-  background-color: #f7ebe2;
+  background-color: white;
   background-size:cover;
   position:relative;
 }
@@ -31,6 +31,10 @@ h3 {
 
 .ableheader {
   background-image:url(../images/able-hero.png);
+}
+
+.unspoheader {
+  background-image:url(../images/unspo-mockup.jpg);
 }
 
 #hero2 {
